@@ -1,5 +1,6 @@
 #!/usr/bin/make -f
 
+SOURCE=wayland
 PACKAGE=libwayland0
 
 # Install in debian/tmp to retain control through dh_install:
@@ -24,3 +25,8 @@ override_dh_strip:
 
 %:
 	dh $@ --with quilt,autoreconf --builddirectory=build/
+
+# For maintainer use only, generate a tarball:
+gentarball: UV=$(shell dpkg-parsechangelog|awk '/^Version:/ {print $$2}'|sed 's/-.*$$//')
+gentarball:
+	git archive --format=tar upstream-experimental --prefix=$(SOURCE)-$(UV)/ | gzip -9 > ../$(SOURCE)_$(UV).orig.tar.gz
