@@ -1,5 +1,8 @@
 wayland (0.1.0~0-1) UNRELEASED; urgency=low
 
   * Initial release (Closes: #611400).
+  * debian/rules contains a gentarball target to create a tarball from the
+    upstream-experimental branch, to be used until some upstream release
+    happens.
 
  -- Cyril Brulebois <kibi@debian.org>  Mon, 13 Jun 2011 21:50:26 +0200
